2011-12-19  Chong Yidong  <cyd@gnu.org>

	* vc/vc-dir.el (vc-dir-parent-marked-p, vc-dir-children-marked-p):
	Don't signal an error in a predicate function; return non-nil.
	(vc-dir-mark-file): Move the error here.
	(vc-dir-mark-unmark): If acting on the region, keep going if one
	of the entries cannot be marked/unmarked.
	(vc-dir-mark-all-files): If current entry is a directory, mark
	only child files, as documented.

2011-12-19  Vincent Belaïche  <vincentb1@users.sourceforge.net>

	* ses.el: Ooops... undo changes of 2011-12-11T14:49:48Z!vincentb1@users.sourceforge.net, as trunk
	branch is feature frozen, and 2011-12-11T14:49:48Z!vincentb1@users.sourceforge.net was a feature
	addition.

2011-12-18  Jan Djärv  <jan.h.d@swipnet.se>

	* term/ns-win.el (ns-get-selection-internal)
	(ns-store-selection-internal): Declare.
	(ns-store-cut-buffer-internal, ns-get-cut-buffer-internal):
	Declare as obsolete.
	(ns-get-pasteboard, ns-paste-secondary):
	Use ns-get-selection-internal.
	(ns-set-pasteboard,  ns-copy-including-secondary):
	Use ns-store-selection-internal.

2011-12-17  Chong Yidong  <cyd@gnu.org>

	* vc/vc.el (vc-next-action): Doc fix; remove CVS-isms.
	(vc-deduce-fileset): Doc fix.

2011-12-16  Andreas Schwab  <schwab@linux-m68k.org>

	* calc/calc-misc.el (calc-help): Avoid wrapping help message.

2011-12-13  Sam Steingold  <sds@gnu.org>

	* man.el (Man-getpage-in-background): When running under a
	window-system, ignore $MANWIDTH and $COLUMNS.

2011-12-15  Kenichi Handa  <handa@m17n.org>

	* language/ethio-util.el: Change coding tag to utf-8-emacs.
	(setup-ethiopic-environment-internal): Comment out key-binding for
	ethio-toggle-punctuation.

2011-12-13  Alan Mackenzie  <acm@muc.de>

	Add the switch statement to AWK Mode.

	* progmodes/cc-awk (awk-font-lock-keywords): Add "switch", "case",
	"default" to the keywords regexp.

	* progmodes/cc-langs (c-label-kwds): Let AWK take the same
	expression as the rest.