@@ -1,3 +1,8 @@
+2011-12-20  Martin Rudalics  <rudalics@gmx.at>
+
+	* window.el (window-normalize-buffer-to-display): Remove.
+	(display-buffer): Handle buffer-or-name argument as in Emacs 23.
+
 2011-12-19  Chong Yidong  <cyd@gnu.org>
 
 	* vc/vc-dir.el (vc-dir-parent-marked-p, vc-dir-children-marked-p):
